[project]
name = "finance-tracker-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
# app uses namespace-package directories without __init__.py files. Resolve
# modules from this project root so same-named router/repository files stay distinct.
explicit_package_bases = true
